[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pbnative"
authors = [
    { name="Keops", email="pierjcb@gmail.com"}
]
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pbnative.__version__.version"}

[project.scripts]
pbnative-setup = "pbnative:setup"
pbnative-start = "pbnative:start"

[tool.setuptools.package-data]
pbnative = ["*.txt", "*.json"]
"pbnative.resources" = ["*.json", "*.js", "*.css"]
"pbnative.icons" = ["*.svg"]